[package]
name = "reliquary"
version = "0.0.3"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = "4.5.49"
crossterm = "0.29.0"
directories = "6.0.0"
dolmen = { optional = true, version = "0.0.1", git = "https://github.com/eupraxia05/dolmen.git", rev="v0.0.1" }
macros = { path = "macros" }
ratatui = "0.29.0"
rusqlite = "0.37.0"
shlex = "1.3.0"
tabled = "0.20.0"
venial = "0.6.1"
bevy = { optional = true, version = "0.16", default-features = false, features=["bevy_log"] }

[features]
bevy = ["dep:bevy"]
dolmen = ["dep:dolmen"]
